<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_campgrounds">

    <fragment
        android:id="@+id/navigation_campgrounds"
        android:name="com.sitebook.ui.campgrounds.CampgroundsFragment"
        android:label="@string/title_campgrounds"
        tools:layout="@layout/fragment_campgrounds">
        
        <action
            android:id="@+id/action_navigation_campgrounds_to_campground_detail"
            app:destination="@id/campground_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.sitebook.ui.reservations.ReservationsFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservations" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sitebook.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/campground_detail"
        android:name="com.sitebook.ui.campgrounds.CampgroundDetailFragment"
        android:label="@string/campground_details"
        tools:layout="@layout/fragment_campground_detail">
        
        <argument
            android:name="campgroundId"
            app:argType="string" />
            
        <action
            android:id="@+id/action_campground_detail_to_campsite_detail"
            app:destination="@id/campsite_detail" />
    </fragment>

    <fragment
        android:id="@+id/campsite_detail"
        android:name="com.sitebook.ui.campgrounds.CampsiteDetailFragment"
        android:label="@string/campsite_details"
        tools:layout="@layout/fragment_campsite_detail">
        
        <argument
            android:name="campsiteId"
            app:argType="string" />
    </fragment>

</navigation>