<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_campgrounds">

    <fragment
        android:id="@+id/navigation_campgrounds"
        android:name="com.sitebook.ui.campgrounds.CampgroundsFragment"
        android:label="@string/title_campgrounds"
        tools:layout="@layout/fragment_campgrounds">
        
        <action
            android:id="@+id/action_campgrounds_to_campground_detail"
            app:destination="@id/campgroundDetailFragment" />
            
        <action
            android:id="@+id/action_campgrounds_to_reservations"
            app:destination="@id/navigation_reservations" />
            
    </fragment>

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.sitebook.ui.reservations.ReservationsFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservations">
        
        <action
            android:id="@+id/action_reservations_to_reservation_detail"
            app:destination="@id/reservationDetailFragment" />
            
        <action
            android:id="@+id/action_reservations_to_campgrounds"
            app:destination="@id/navigation_campgrounds" />
            
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sitebook.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
        
    <!-- Detail Fragments -->
    <fragment
        android:id="@+id/campgroundDetailFragment"
        android:name="com.sitebook.ui.campgrounds.CampgroundDetailFragment"
        android:label="@string/campground_details">
        
        <argument
            android:name="campgroundId"
            app:argType="string" />
            
    </fragment>
    
    <fragment
        android:id="@+id/reservationDetailFragment"
        android:name="com.sitebook.ui.reservations.ReservationDetailFragment"
        android:label="@string/reservation_details">
        
        <argument
            android:name="reservationId"
            app:argType="string" />
            
    </fragment>

</navigation>